tests/paczka1/fuzzy1/51007905.err
Error in line 9: S631 A77 62,4
Error in line 15: S631 S631 50,9
Error in line 1: vsBx4Rzle S840 57,9
Error in line 24: Ihl24AWkrfK A18 H8,3
Error in line 23: Ihl24AWkrfK A18 55,5
Error in line 16: S631 S840 58,7
Error in line 32: Ihl24AWkrfK A77 102,0
